--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,33 @@
 .App {
-  text-align: center;
-  width: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
+	text-align: center;
+	width: 100%;
+	max-width: 1200px;
+	margin: 0 auto;
 }
 
 .App header {
-  margin-bottom: 2rem;
+	margin-bottom: 2rem;
 }
 
 .App h1 {
-  font-size: 2.5rem;
-  color: #61dafb;
+	font-size: 2.5rem;
+	color: #61dafb;
 }
 
 main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 2rem;
+	width: 100%;
+	margin: 0 auto;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 2rem;
 }
 
 .selectors {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  gap: 2rem;
+	width: 100%;;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 1rem;
 }
